<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DigitalMenu</string>
    <string name="xml_uri">http://www.dmenu.ru/</string>
    <string name="tables_ext">tables</string>
    <string name="restaurant">1010101</string>
    <string name="sample_section">Европейская кухня</string>
    <string name="sample_sub">Холодные закуски</string>
    <string name="main_text_confirm">Ваш заказ</string>
    <string name="main_text_img_desc">No image</string>
    <string name="button_clear_str">Очистить</string>
    <string name="button_enter_str">Ввод</string>

    <string name="init_button_0">0</string>
    <string name="init_button_1">1</string>
    <string name="init_button_2">2</string>
    <string name="init_button_3">3</string>
    <string name="init_button_4">4</string>
    <string name="init_button_5">5</string>
    <string name="init_button_6">6</string>
    <string name="init_button_7">7</string>
    <string name="init_button_8">8</string>
    <string name="init_button_9">9</string>
    <string name="init_question">Введите номер стола</string>
    
    <string name="title_adv_img_text">Место для рекламы</string>
    <string name="title_img_entrance">Вход</string>
    <string name="order_complete">Оформить заказ</string>
    <string name="order_clear">Очистить заказ</string>
    <string name="order_sum">Общая сумма</string>
    <string name="order_complete_title">Оформление заказа</string>
    <string name="order_complete_left1">Два отдельных зала вместимостью 60 и 20 человек.</string>
    <string name="order_complete_left2">Предварительный заказ торжеств и банкетов у бармена или по тел. 258&#8211;06&#8211;11</string>
    <string name="order_complete_left3">За принесенные с собой закуски и спиртные напитки - ШТРАФ 500 руб.</string>
    <string name="order_complete_left4" formatted="false">В Ваш счет включается 5% за обслуживание и 10% за банкет.</string>
    <string name="order_send">Отправить</string>
    <string name="order_send_progress">Отправляется</string>
    <string name="order_thanks">Ваш заказ отправлен на кухню. Через пару минут Вам его принесут. А пока Вы можете проверить почту, почитать новости, посмотреть фильм или сыграть в игры</string>
    <string name="dialog_add_title">Добавить в заказ</string>
    
    <string name="call_waiter">Позвать официанта</string>
    
    <string name="add">Добавить</string>
    <string name="change">Изменить</string>
    <string name="not_modify">Не добавлять</string>
    <string name="remove">Удалить из заказа</string>
    
    <string name="price_format" formatted="false">%s руб</string>
    
    <string name="pref_code_title">Код</string>
    <string name="pref_code_summary">Код ресторана</string>
    <string name="pref_code_defaut">1010101</string>
    
    <string name="pref_table_title">Столик</string>
    <string name="pref_table_summary">Номер столика</string>
    <string name="pref_table_default">0</string>
    
    <string name="pref_style_title">Стиль</string>
    <string name="pref_style_dialog_title">Выбор стиля</string>
    <string name="pref_style_summary">Выбор стиля оформления</string>
    <string name="pref_style_default">0</string>
    <string-array name="pref_style_entries">
        <item>0</item>
    </string-array>
    <string-array name="pref_style_values">
        <item>По умолчанию</item>
    </string-array>
    <string name="pref_hidden">Скрыть</string>
</resources>