<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference 
        android:title="@string/pref_code_title"
		android:key="pref_restaurant"
		android:defaultValue="@string/pref_code_defaut"
		android:summary="@string/pref_code_summary"/>
    <EditTextPreference 
        android:title="@string/pref_table_title"
        android:key="pref_table"
        android:defaultValue="@string/pref_table_default"
        android:summary="@string/pref_table_summary"/>
    <ListPreference 
        android:title="@string/pref_style_title"
        android:key="pref_style"
        android:dialogTitle="@string/pref_style_dialog_title"
        android:defaultValue="@string/pref_style_default"
        android:summary="@string/pref_style_summary"
        android:entries="@array/pref_style_values"
        android:entryValues="@array/pref_style_entries"/>
</PreferenceScreen>