<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:weightSum="4" >
    <LinearLayout android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:contentDescription="@string/title_adv_img_text"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/order_complete_left1"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/order_complete_left2"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/order_complete_left3"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/order_complete_left4"/>
    </LinearLayout>
	<LinearLayout android:layout_width="0dp"
	    android:layout_weight="3"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:id="@+id/order_second_screen">
	    <TextView android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	style="@style/DigitalMenu.Main.DefaultButton"
	    	android:text="@string/order_complete_title"/>
	    <ListView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/main_order_layout">
	    </ListView>
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="right">
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/order_sum"
	            android:layout_marginRight="5dp"
	            android:textSize="18sp"/>
	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/order_total_sum"
	            android:textSize="18sp"/>
	    </LinearLayout>
		<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/order_send"
			android:onClick="onOrderSendClick"
			style="@style/DigitalMenu.Main.DefaultButton"
			android:layout_gravity="right"/>
	</LinearLayout>
</LinearLayout>