<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_name"
        android:textSize="24sp"/>
    <com.remirran.digitalmenu.MenuImage
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_text_img_desc"
        android:id="@+id/dialog_img"/>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal">
	    <ImageButton android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/minus"
	        android:id="@+id/dialog_inc"
	        android:contentDescription="@string/add"/>
	    <TextView android:layout_height="fill_parent"
	        android:layout_width="wrap_content"
	        android:id="@+id/dialog_count"
	        android:textSize="32sp"/>
	    <ImageButton android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/remove"
	        android:id="@+id/dialog_dec"
	        android:src="@drawable/plus"/>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical">
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:id="@+id/dialog_price"
	            android:textSize="24sp"/>
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/add"
	            style="@style/DigitalMenu.Main.DefaultButton"/>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>